# fsql

./: Cargo.toml  README.md  bindings_c_example.c  bindings_cpp_example.cpp  bindings_go_main.go  bindings_python_example.py  bindings_swift_main.swift  include_fsql.h
.claude/: settings.local.json
src/: engine.rs  error.rs  ffi.rs  identifier.rs  lib.rs  logging.rs  pool.rs  query.rs  value.rs
src/sql/: ast.rs  mod.rs  parser.rs
src/storage/: catalog.rs  codec.rs  mod.rs  table.rs
tests/: performance.rs
