[package]
name = "fsql"
version = "0.1.0"
edition = "2024"
description = "A tiny embedded SQL database prototype written in Rust."
license = "MIT"

[lib]
name = "fsql"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }
